--- a/FilesCompare/View/MainWindow.xaml
+++ b/FilesCompare/View/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="FilesCompare.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:converter="clr-namespace:FilesCompare.Converter"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         ResizeMode="NoResize"
@@ -10,6 +11,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Style/ybx_GraySimpleStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <converter:PathConverter x:Key="PathConverter"/>
         </ResourceDictionary>
     </Window.Resources>
     <Grid Background="White">
@@ -160,11 +162,16 @@
             <Grid Grid.Column="0">
                 <!--<ScrollViewer HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">-->
                 <Grid HorizontalAlignment="Stretch">
+                    <Grid.Resources>
+                        <Style TargetType="DataGrid">
+                            <Setter Property="GridLinesVisibility" Value="None"/>
+                        </Style>
+                    </Grid.Resources>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <DataGrid x:Name="dgNew" ScrollViewer.ScrollChanged="DataGrid_ScrollChanged" CanUserAddRows="False" SelectionMode="Single" RowBackground="White" AlternatingRowBackground="#FFD4D0D0" Grid.Column="0" RowHeight="22" HorizontalAlignment="Stretch" AutoGenerateColumns="False" Margin="1" ItemsSource="{Binding Result1, UpdateSourceTrigger=PropertyChanged}" PreviewMouseDoubleClick="DataGrid_PreviewMouseDoubleClick">
+                    <DataGrid x:Name="dgNew" ScrollViewer.ScrollChanged="DataGrid_ScrollChanged" CanUserAddRows="False" SelectionMode="Single" RowBackground="#FFD4D0D0" AlternatingRowBackground="#FFD4D0D0" Grid.Column="0" RowHeight="22" HorizontalAlignment="Stretch" AutoGenerateColumns="False" Margin="1" ItemsSource="{Binding Result1, UpdateSourceTrigger=PropertyChanged}" PreviewMouseDoubleClick="DataGrid_PreviewMouseDoubleClick">
                         <DataGrid.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <VirtualizingStackPanel/>
@@ -182,9 +189,9 @@
                                             <DataTrigger Binding="{Binding IsFile}" Value="false">
                                                 <Setter TargetName="file" Property="Source" Value="..\Style\folder.ico"/>
                                             </DataTrigger>
-                                            <!--<DataTrigger Binding="{Binding IsFile}" Value="false">
-                                                    <Setter TargetName="folder" Property="Visibility" Value="Visible"/>
-                                                </DataTrigger>-->
+                                            <DataTrigger Binding="{Binding FName}" Value="">
+                                                <Setter TargetName="file" Property="Visibility" Value="Collapsed"/>
+                                            </DataTrigger>
                                         </DataTemplate.Triggers>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -207,7 +214,14 @@
                             <DataGridTemplateColumn Header="全路径">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock x:Name="txtFile" Foreground="Black" Text="{Binding FFullName}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                                        <TextBlock x:Name="txtFile" Foreground="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                            <TextBlock.Text>
+                                                <MultiBinding Converter="{StaticResource PathConverter}">
+                                                    <Binding Path="DataContext.FilePath1" RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType=Window}"/>
+                                                    <Binding Path="FFullName"/>
+                                                </MultiBinding>
+                                            </TextBlock.Text>
+                                        </TextBlock>
                                         <DataTemplate.Triggers>
                                             <DataTrigger Binding="{Binding DifTag}" Value="True">
                                                 <Setter TargetName="txtFile" Property="Background" Value="Yellow"/>
@@ -221,7 +235,7 @@
                             </DataGridTemplateColumn>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <DataGrid x:Name="dgOld" ScrollViewer.ScrollChanged="DataGrid_ScrollChanged"  CanUserAddRows="False" RowBackground="White" AlternatingRowBackground="#FFD4D0D0" Grid.Column="1" RowHeight="22" HorizontalAlignment="Stretch" AutoGenerateColumns="False" Margin="1" ItemsSource="{Binding Result2, UpdateSourceTrigger=PropertyChanged}" PreviewMouseDoubleClick="DataGrid_PreviewMouseDoubleClick" SelectionMode="Single">
+                    <DataGrid x:Name="dgOld" ScrollViewer.ScrollChanged="DataGrid_ScrollChanged"  CanUserAddRows="False" RowBackground="#FFD4D0D0" AlternatingRowBackground="#FFD4D0D0" Grid.Column="1" RowHeight="22" HorizontalAlignment="Stretch" AutoGenerateColumns="False" Margin="1" ItemsSource="{Binding Result2, UpdateSourceTrigger=PropertyChanged}" PreviewMouseDoubleClick="DataGrid_PreviewMouseDoubleClick" SelectionMode="Single">
                         <DataGrid.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <VirtualizingStackPanel />
@@ -238,6 +252,9 @@
                                         <DataTemplate.Triggers>
                                             <DataTrigger Binding="{Binding IsFile}" Value="false">
                                                 <Setter TargetName="file" Property="Source" Value="..\Style\folder.ico"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding FName}" Value="">
+                                                <Setter TargetName="file" Property="Visibility" Value="Collapsed"/>
                                             </DataTrigger>
                                             <!--<DataTrigger Binding="{Binding IsFile}" Value="false">
                                                     <Setter TargetName="folder" Property="Visibility" Value="Visible"/>
@@ -264,7 +281,14 @@
                             <DataGridTemplateColumn Header="全路径">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock x:Name="txtFile" Foreground="Black" Text="{Binding FFullName}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                                        <TextBlock x:Name="txtFile" Foreground="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                            <TextBlock.Text>
+                                                <MultiBinding Converter="{StaticResource PathConverter}">
+                                                    <Binding Path="DataContext.FilePath2" RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType=Window}"/>
+                                                    <Binding Path="FFullName"/>
+                                                </MultiBinding>
+                                            </TextBlock.Text>
+                                        </TextBlock>
                                         <DataTemplate.Triggers>
                                             <DataTrigger Binding="{Binding DifTag}" Value="True">
                                                 <Setter TargetName="txtFile" Property="Background" Value="Yellow"/>
@@ -291,7 +315,7 @@
                 </Grid.RowDefinitions>
                 <Border Grid.Row="0" Background="Gray"/>
                 <TextBlock Text="运行日志" Foreground="White" Grid.Row="0" HorizontalAlignment="Center"></TextBlock>
-                <TextBox Grid.Row="1" HorizontalAlignment="Stretch" Grid.RowSpan="2" Text="{Binding Logs, UpdateSourceTrigger=PropertyChanged}" 
+                <TextBox Grid.Row="1" Foreground="Black" HorizontalAlignment="Stretch" Grid.RowSpan="2" Text="{Binding Logs, UpdateSourceTrigger=PropertyChanged}" 
                          FontSize="12" BorderThickness="1" Margin="0,0,0,1" SnapsToDevicePixels="True"
                          Style="{StaticResource DownClearButtonTextBoxStyle}" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                 </TextBox>
