黑名单白名单设置期待改进

--- a/FilesCompare/View/MainWindow.xaml
+++ b/FilesCompare/View/MainWindow.xaml
@@ -107,7 +107,13 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Grid.Column="0" Grid.Row="0" Text="黑名单:" FontFamily="幼圆"/>
-            <TextBox Grid.Row="0" TabIndex="0" Grid.Column="1" ToolTip="以'|'号分隔" Text="{Binding Config, Mode=TwoWay,UpdateSourceTrigger=LostFocus}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}"/>
+            <TextBox Grid.Row="0" TabIndex="0" Grid.Column="1" ToolTip="以'|'号分隔" Text="{Binding Config, Mode=TwoWay,UpdateSourceTrigger=LostFocus}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}">
+            </TextBox>
+            <Popup Width="352" Height="200" Grid.Row="1" Grid.Column="1" IsOpen="False">
+                <StackPanel Background="White">
+                    
+                </StackPanel>
+            </Popup>
             <TextBlock Grid.Column="2" Grid.Row="0" Text="仅比对:" FontFamily="幼圆"/>
             <TextBox Grid.Row="0" TabIndex="1" Grid.Column="3" ToolTip="以'|'号分隔" Text="{Binding Prefer, Mode=TwoWay,UpdateSourceTrigger=LostFocus}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}"/>
 
@@ -222,7 +228,7 @@
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel x:Name="sp" Orientation="Horizontal" Width="auto">
-                                            <TextBlock FontFamily="Italic" Foreground="#FFD7AB69" ToolTip="{Binding JarParentName}">
+                                            <TextBlock FontFamily="Italic" VerticalAlignment="Center" Foreground="#FFD7AB69" ToolTip="{Binding JarParentName}">
                                                 <TextBlock.Text>
                                                     <MultiBinding Converter="{StaticResource JarNameConverter}">
                                                         <Binding Path="DataContext.FilePath1" RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType=Window}"/>
@@ -299,7 +305,7 @@
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel x:Name="sp" Orientation="Horizontal" Width="auto">
-                                            <TextBlock FontFamily="Italic" ToolTip="{Binding JarParentName}" Foreground="#FFD7AB69">
+                                            <TextBlock FontFamily="Italic" VerticalAlignment="Center" ToolTip="{Binding JarParentName}" Foreground="#FFD7AB69">
                                                 <TextBlock.Text>
                                                     <MultiBinding Converter="{StaticResource JarNameConverter}">
                                                         <Binding Path="DataContext.FilePath2" RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType=Window}"/>
