--- a/FilesCompare/View/MainWindow.xaml
+++ b/FilesCompare/View/MainWindow.xaml
@@ -109,9 +109,9 @@
             <TextBlock Grid.Column="0" Grid.Row="0" Text="黑名单:" FontFamily="幼圆"/>
             <TextBox Grid.Row="0" TabIndex="0" Grid.Column="1" ToolTip="以'|'号分隔" Text="{Binding Config, Mode=TwoWay,UpdateSourceTrigger=LostFocus}" HorizontalAlignment="Stretch" FontFamily="幼圆" FontSize="20" Style="{StaticResource SecContentTBXStyle}">
             </TextBox>
-            <Popup Width="352" Height="200" Grid.Row="1" Grid.Column="1" IsOpen="False">
-                <StackPanel Background="White">
-                    
+            <Popup Width="352" Height="200" Grid.Row="0" Grid.Column="1">
+                <StackPanel Background="White" Margin="75,-25,-35,60" Orientation="Vertical">
+                    <DataGrid ItemsSource="{Binding Ignores}"></DataGrid>
                 </StackPanel>
             </Popup>
             <TextBlock Grid.Column="2" Grid.Row="0" Text="仅比对:" FontFamily="幼圆"/>
